--- a/Sheik/Shabaz/.github/workflows/ci-cd.yml
+++ b/Sheik/Shabaz/.github/workflows/ci-cd.yml
@@ -16,14 +16,20 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v3
 
+    - name: Debug Checkout
+      run: ls -la
+
     - name: Set up JDK
       uses: actions/setup-java@v3
       with:
         java-version: '17'
         distribution: 'temurin'
 
+    - name: Print Working Directory
+      run: pwd
+
     - name: Build with Maven
-      run: mvn -B package --file pom.xml
+      run: mvn -B package --file ./pom.xml
 
     - name: Run Tests
       run: mvn test
