--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -23,8 +23,8 @@ jobs:
         distribution: 'temurin'
 
     - name: Build with Maven
-      run: mvn -B package --file ./Sheik/Shabaz/pom.xml
+      run: mvn -B package --file Sheik/Shabaz/pom.xml
 
     - name: Run Tests
-      run: mvn test --file ./Sheik/Shabaz/pom.xml
+      run: mvn test --file Sheik/Shabaz/pom.xml
 
