--- a/Sheik/Shabaz/src/main/resources/application.properties
+++ b/Sheik/Shabaz/src/main/resources/application.properties
@@ -1,10 +1,10 @@
 spring.application.name=Shabaz
 
-spring.datasource.url=jdbc:oracle:thin:@//localhost:1521/FREEPDB1
-spring.datasource.username=STUDENT
-spring.datasource.password=root
-spring.datasource.driver=class-oracle.jdbc.driver.OracleDriver
-spring.jpa.hibernate.ddl-auto=update
+#spring.datasource.url=jdbc:oracle:thin:@//localhost:1521/FREEPDB1
+#spring.datasource.username=STUDENT
+#spring.datasource.password=root
+#spring.datasource.driver=class-oracle.jdbc.driver.OracleDriver
+#spring.jpa.hibernate.ddl-auto=update
 
 spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
