--- a/Sheik/Shabaz/src/main/resources/application.properties
+++ b/Sheik/Shabaz/src/main/resources/application.properties
@@ -8,3 +8,5 @@ spring.application.name=Shabaz
 
 spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
+
+spring.profiles.active=test
