--- a/Sheik/Shabaz/src/main/resources/application.properties
+++ b/Sheik/Shabaz/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 spring.application.name=Shabaz
 
-spring.datasource.url=jdbc:oracle:thin:@//localhost:1521/FREEPDB1
-spring.datasource.username=STUDENT
-spring.datasource.password=root
-spring.datasource.driver=class-oracle.jdbc.driver.OracleDriver
+spring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
 spring.jpa.hibernate.ddl-auto=update
 
 spring.thymeleaf.prefix=classpath:/templates/
